[package]
name = "zephyrj-beamng-tools"
version = "0.4.0-alpha"
edition = "2021"
authors = ["zephyrj <zephyrj@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
tracing = "0.1"
serde_json = "1.0"
serde-hjson = { version = "1.1.0", default-features = false }
zip = "2.1.0"
whoami = "1.5.2"

[target.'cfg(target_os = "windows")'.dependencies]
parselnk = "0.1.1"
